--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -31,6 +34,7 @@
         <activity android:name=".LoginActivity"></activity>
         <activity android:name=".PostActivity"></activity>
         <activity android:name=".EmailPasswordActivity"></activity>
+        <activity android:name=".BluetoothActivity"></activity>
     </application>
 
 </manifest>
