--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/shoppingcart"
         android:label="ShoongCart"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/shoppingcart"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
@@ -34,7 +34,7 @@
         <activity android:name=".LoginActivity"></activity>
         <activity android:name=".PostActivity"></activity>
         <activity android:name=".EmailPasswordActivity"></activity>
-        <activity android:name=".BluetoothActivity"></activity>
+        <activity android:name=".MemoActivity"></activity>
     </application>
 
 </manifest>
