--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
     <uses-permission android:name="android.permission.BLUETOOTH"/>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/shoppingcart"
@@ -30,7 +33,17 @@
         <activity android:name=".LoginActivity"></activity>
         <activity android:name=".PostActivity"></activity>
         <activity android:name=".EmailPasswordActivity"></activity>
-        <activity android:name=".MemoActivity"></activity>
+        <activity android:name=".MemoActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".MemoInsertActivity" />
+
         <activity android:name=".SplashActivity"
             android:theme="@style/splashTheme">
             <intent-filter>
